--- a/leave-sacation.html
+++ b/leave-sacation.html
@@ -151,7 +151,8 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">มีกำหนด</label>
                         <div class="col-sm-8">
-                            <select type="number" class="form-control" id="ran5" name="" placeholder="" required="required">
+                            <select type="number" class="form-control" id="ran5" name="" placeholder=""
+                                required="required">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -225,72 +226,72 @@
                                                                 belost.</small></p> -->
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
                                             <input type="text" class="form-control" id="rown0" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">วันที่เขียน</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">วันที่เขียน</label>
                                             <input type="date" class="form-control" id="rown1" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ประเภท</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ประเภทการลา</label>
                                             <input type="text" class="form-control" id="rown2" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ลาวันที่</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ลาวันที่</label>
                                             <input type="date" class="form-control" id="rown3" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                                             <input type="date" class="form-control" id="rown4" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">มีกำหนด</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">มีกำหนด</label>
                                             <input type="text" class="form-control" id="rown5" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">เนื่องจาก</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">เนื่องจาก</label>
                                             <input type="text" class="form-control" id="rown6" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                                             <input type="text" class="form-control" id="rown7" name="-" placeholder=""
                                                 readonly>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                                         <div class="col-sm-8">
-                                            <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                                             <input type="text" class="form-control" id="rown8" name="-" placeholder=""
                                                 readonly>
                                         </div>
