--- a/home.html
+++ b/home.html
@@ -72,18 +72,24 @@
                     <div class="row justify-content-around">
                         <div class="col-12 mt-3">
                             <a href="leave-sick.html"><button class="btn btn-light btn-block " type="button">
-                                    <i class="fas fa-receipt"> </i> ใบลาป่วย / ใบลากิจ</button></a>
+                                    <i class="fas fa-receipt"> </i> ใบลาป่วย / ใบลากิจ </button></a>
                         </div>
 
                         <div class="col-12 mt-3">
                             <a href="leave-sacation.html"><button class="btn btn-light btn-block " type="button">
-                                    <i class="fas fa-receipt"> </i> ใบลาพักผ่อน</button></a>
+                                    <i class="fas fa-receipt"> </i> ใบลาพักผ่อน </button></a>
                         </div>
 
                         <div class="col-12 mt-3">
-                            <a href="./index.html"><button class="btn btn-light btn-block " type="button"><i
+                            <a href="offsite.html"><button class="btn btn-light btn-block " type="button">
+                                    <i class="fas fa-receipt"> </i> ใบขออนุญาตออกนอกสถานที่ </button></a>
+                        </div>
+
+                        <div class="col-12 mt-3">
+                            <a href="index.html"><button class="btn btn-light btn-block " type="button"><i
                                         class="fa fa-bookmark"></i> กลับสู่หน้าหลัก </button></a>
                         </div>
+                        
 
                         <div class="col-12 mt-3">
                             <button id="logout" class="btn btn-success btn-block " type="Button" name="LogoutButton"
