--- a/offsite.html
+++ b/offsite.html
@@ -78,8 +78,8 @@
                         <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
                         <div class="col-sm-8">
                             <!-- <input type="text" class="form-control" id="log2" name="ข้าพเจ้า" placeholder="" readonly> -->
-                            <select type="text" class="form-control" id="log2" name="ข้าพเจ้า"
-                                placeholder="" required="">
+                            <select type="text" class="form-control" id="log2" name="ข้าพเจ้า" placeholder=""
+                                required="">
 
                                 <option value="">เลือกชื่อผู้ใช้งาน</option>
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
@@ -110,7 +110,8 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" data-provide="datepicker" data-date-language="th-th" id="ran1" name="เขียนวันที่" placeholder="">
+                            <input type="date" class="form-control" data-provide="datepicker" data-date-language="th-th"
+                                id="ran1" name="เขียนวันที่" placeholder="">
 
                         </div>
                     </div>
@@ -222,16 +223,18 @@
                                     <div class="form-group row">
                                         <label class="col-sm-4 col-form-label">เหตุผล</label>
                                         <div class="col-sm-8">
-                                            <input type="text" class="form-control" id="rown2" name="-" placeholder=""
-                                                readonly>
+                                            <textarea type="text" class="form-control" id="rown2" name="-"
+                                                placeholder="" readonly>
+                                            </textarea>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
                                         <label class="col-sm-4 col-form-label">สถานที่</label>
                                         <div class="col-sm-8">
-                                            <input type="text" class="form-control" id="rown3" name="-" placeholder=""
-                                                readonly>
+                                            <textarea type="text" class="form-control" id="rown3" name="-"
+                                                placeholder="" readonly>
+                                            </textarea>
                                         </div>
                                     </div>
 
