--- a/login.html
+++ b/login.html
@@ -70,6 +70,7 @@
 							<select type="text" class="form-control" id="username" name="username"
 								placeholder="username" required="required">
 								<option value="">เลือกชื่อผู้ใช้งาน</option>
+								<!-- //ข้าราชการ// -->
 								<option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
 								<option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร</option>
 								<option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล</option>
@@ -77,7 +78,7 @@
 								<option value="นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์</option>
 								<option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์</option>
 								<option value="นายสุรชาติ ระย้าทอง">นายสุรชาติ ระย้าทอง</option>
-								<!-- <option value="">เลือกชื่อผู้ใช้งาน</option> -->
+								<!-- //พนักงานราชการ// -->
 								<option value="นายสันติ โพธิ์ทอง">นายสันติ โพธิ์ทอง</option>
 								<option value="ว่าที่ ร.ต.ปัญญาพล พูลสุข">ว่าที่ ร.ต.ปัญญาพล พูลสุข</option>
 								<option value="นายธีรภัทร์ บัวยศ">นายธีรภัทร์ บัวยศ</option>
@@ -86,19 +87,19 @@
 								<option value="นายปราโมทย์ จันทร์ประสงค์">นายปราโมทย์ จันทร์ประสงค์</option>
 								<option value="นายสกล สิงห์สี">นายสกล สิงห์สี</option>
 								<option value="นายเอก สุนทรวิภาต">นายเอก สุนทรวิภาต</option>
+								<!-- //ลูกจ้างประจำ// -->
 								<option value="นายอนุชา ชมดง">นายอนุชา ชมดง</option>
 								<option value="นายสมคิด นัยวงศ์">นายสมคิด นัยวงศ์</option>
 								<option value="นายสมบัติ ศรีประทุม">นายสมบัติ ศรีประทุม</option>
 								<option value="นายมาโนช เงินมี">นายมาโนช เงินมี</option>
-								<!-- //จ้างเหมา//
+								<!-- //จ้างเหมา// -->
 								<option value="นางมณีรัตน์ สุขโต">นางมณีรัตน์ สุขโต</option>
 								<option value="นางกัญญารัตน์ แสงวงษา">นางกัญญารัตน์ แสงวงษา</option>
 								<option value="นายสมนึก ศรสีดา">นายสมนึก ศรสีดา</option>
 								<option value="นายเลียด ผลสุก">นายเลียด ผลสุก</option>
 								<option value="นายสมบัติ ความคุ้นเคย">นายสมบัติ ความคุ้นเคย</option>
 								<option value="นายทศพร สิงหชัย">นายทศพร สิงหชัย</option>
-								<option value="น.ส.กัญญาวีร์ รวมพวก">น.ส.กัญญาวีร์ รวมพวก</option>
-								-->
+								<option value="น.ส.กัญญาวีร์ รวมพวก">น.ส.กัญญาวีร์ รวมพวก</option>							
 							</select>
 						</div>
 					</div>
