--- a/offsite.html
+++ b/offsite.html
@@ -77,32 +77,10 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ข้าพเจ้า</label>
                         <div class="col-sm-8">
-                            <!-- <input type="text" class="form-control" id="log2" name="ข้าพเจ้า" placeholder="" readonly> -->
-                            <select type="text" class="form-control" id="log2" name="ข้าพเจ้า" placeholder=""
-                                required="">
+                            <input type="text" class="form-control" id="log2" name="ข้าพเจ้า" placeholder="" readonly>
+                            <!--<select type="text" class="form-control" id="log2" name="ข้าพเจ้า" placeholder=""
+                                required=""> -->
 
-                                <option value="">เลือกชื่อผู้ใช้งาน</option>
-                                <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
-                                <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร</option>
-                                <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล</option>
-                                <option value="นายจิรวัสส์ เจียตระกูล">นายจิรวัสส์ เจียตระกูล</option>
-                                <option value="นายปริญญวัฒน์ อยู่ทองอินทร์">นายปริญญวัฒน์ อยู่ทองอินทร์</option>
-                                <option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์</option>
-                                <option value="นายสุรชาติ ระย้าทอง">นายสุรชาติ ระย้าทอง</option>
-                                <!-- <option value="">เลือกชื่อผู้ใช้งาน</option> -->
-                                <option value="นายสันติ โพธิ์ทอง">นายสันติ โพธิ์ทอง</option>
-                                <option value="ว่าที่ ร.ต.ปัญญาพล พูลสุข">ว่าที่ ร.ต.ปัญญาพล พูลสุข</option>
-                                <option value="นายธีรภัทร์ บัวยศ">นายธีรภัทร์ บัวยศ</option>
-                                <option value="นายอภิชาติ ยิ่งวุฒิวรกุล">นายอภิชาติ ยิ่งวุฒิวรกุล</option>
-                                <option value="นายชาตรี หาศาสน์ศรี">นายชาตรี หาศาสน์ศรี</option>
-                                <option value="นายปราโมทย์ จันทร์ประสงค์">นายปราโมทย์ จันทร์ประสงค์</option>
-                                <option value="นายสกล สิงห์สี">นายสกล สิงห์สี</option>
-                                <option value="นายเอก สุนทรวิภาต">นายเอก สุนทรวิภาต</option>
-                                <option value="นายอนุชา ชมดง">นายอนุชา ชมดง</option>
-                                <option value="นายสมคิด นัยวงศ์">นายสมคิด นัยวงศ์</option>
-                                <option value="นายสมบัติ ศรีประทุม">นายสมบัติ ศรีประทุม</option>
-                                <option value="นายมาโนช เงินมี">นายมาโนช เงินมี</option>
-                            </select>
 
                         </div>
                     </div>
@@ -144,14 +122,48 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ระหว่างเวลา</label>
                         <div class="col-sm-8">
-                            <input type="time" class="form-control" id="ran5" name="ระหว่างเวลา" placeholder="">
+                            <select type="text" class="form-control" id="ran5" name="ระหว่างเวลา" placeholder="">
+                                <option value="08.30">08.30</option>
+                                <option value="09.00">09.00</option>
+                                <option value="09.30">09.30</option>
+                                <option value="10.00">10.00</option>
+                                <option value="10.30">10.30</option>
+                                <option value="11.00">11.00</option>
+                                <option value="11.30">11.30</option>
+                                <option value="12.00">12.00</option>
+                                <option value="13.00">13.00</option>
+                                <option value="13.30">13.30</option>
+                                <option value="14.00">14.00</option>
+                                <option value="14.30">14.30</option>
+                                <option value="15.00">15.00</option>
+                                <option value="15.30">15.30</option>
+                                <option value="16.00">16.00</option>
+                                <option value="16.30">16.30</option>
+                            </select>
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ถึงเวลา</label>
                         <div class="col-sm-8">
-                            <input type="time" class="form-control" id="ran6" name="ถึงเวลา" placeholder="">
+                            <select type="text" class="form-control" id="ran6" name="ถึงเวลา" placeholder="">
+                                <option value="08.30">08.30</option>
+                                <option value="09.00">09.00</option>
+                                <option value="09.30">09.30</option>
+                                <option value="10.00">10.00</option>
+                                <option value="10.30">10.30</option>
+                                <option value="11.00">11.00</option>
+                                <option value="11.30">11.30</option>
+                                <option value="12.00">12.00</option>
+                                <option value="13.00">13.00</option>
+                                <option value="13.30">13.30</option>
+                                <option value="14.00">14.00</option>
+                                <option value="14.30">14.30</option>
+                                <option value="15.00">15.00</option>
+                                <option value="15.30">15.30</option>
+                                <option value="16.00">16.00</option>
+                                <option value="16.30">16.30</option>
+                            </select>
                         </div>
                     </div>
 
@@ -314,7 +326,7 @@
     <script src="dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins/jquery/jquery.min.js"></script>
     <script>
-        //var userlog = localStorage.getItem("username")
+        var userlog = localStorage.getItem("username")
         //console.log(userlog);
     </script>
 </body>
